Sync all content

--- a/content/pages/assignments/20-020_assn.md
+++ b/content/pages/assignments/20-020_assn.md
@@ -13,4 +13,18 @@ Draft a letter. Address this letter to someone(s) you care about. Your letter sh
 Time to Complete This Letter: 1 Hour Max.
 -----------------------------------------
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} We're looking ahead to the project you and your team will design this term...the first step is for you to decide what you'd like to work on. This letter should start you thinking about your areas of interest. The letter will also be a way to talk with others about things that interest them. Maybe you'll hear an idea you never considered and want to investigate it further. Maybe you'll find someone with very similar concerns. {{< br >}}{{< br >}}
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+We're looking ahead to the project you and your team will design this term...the first step is for you to decide what you'd like to work on. This letter should start you thinking about your areas of interest. The letter will also be a way to talk with others about things that interest them. Maybe you'll hear an idea you never considered and want to investigate it further. Maybe you'll find someone with very similar concerns.
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
