--- a/content/pages/lecture-and-studio-notes/wk01.md
+++ b/content/pages/lecture-and-studio-notes/wk01.md
@@ -33,7 +33,27 @@ Course orientation slides ([PDF - 1.2MB]({{< baseurl >}}/resources/mit20_020s09_
 
 Your team has 20 minutes to design and build a plane for the competition. If you are not ready to launch at this time, you will forfeit.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} *   "to give us a way to visualize a design that may seem unlikely and that may not seem like it would work"{{< br >}}*   "to give us a problem we might feel is more approachable"{{< br >}}*   "the most complicated design isn't always the best. Simple works"{{< br >}}*   "how different all the plane designs are, even starting with the same materials."{{< br >}}*   "I think it was difficult to decide on rolls" {{< br >}}{{< br >}} Comments courtesy of the students. Used with permission. {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+*   "to give us a way to visualize a design that may seem unlikely and that may not seem like it would work"
+*   "to give us a problem we might feel is more approachable"
+*   "the most complicated design isn't always the best. Simple works"
+*   "how different all the plane designs are, even starting with the same materials."
+*   "I think it was difficult to decide on rolls"
+
+Comments courtesy of the students. Used with permission.
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework
 
@@ -97,7 +117,21 @@ You will have 10 minutes to gather with your fellow moviegoers and discuss what 
 4.  are there aspects of the work that are unclear to you?
 5.  if you could ask this team one question what would it be?
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} Most of our studio session today was spent considering two projects carried out by undergraduates not unlike yourself. The iGEMers worked in teams (as you will) to figure out what they wanted to build (as you will) and then spent some time in the lab realizing their project (not possible in this class but you could join the iGEM program this summer, as three of the 20.020 students from Spring 2008 did!). Remember that these are just two projects of many and you should feel motivated by them to work this term on a project that's important to you. The projects also highlight a few of the many widgets in the toolbox for biological engineers. You might want to revisit these projects as the details of your project becomes clearer. {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+Most of our studio session today was spent considering two projects carried out by undergraduates not unlike yourself. The iGEMers worked in teams (as you will) to figure out what they wanted to build (as you will) and then spent some time in the lab realizing their project (not possible in this class but you could join the iGEM program this summer, as three of the 20.020 students from Spring 2008 did!). Remember that these are just two projects of many and you should feel motivated by them to work this term on a project that's important to you. The projects also highlight a few of the many widgets in the toolbox for biological engineers. You might want to revisit these projects as the details of your project becomes clearer.
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Part 2: Dear John
 
@@ -129,7 +163,32 @@ Due at next class
     *   "One of the problems of taking things apart and seeing how they work—supposing you're trying to find out how a cat works--you take that cat apart to see how it works, what you've got in your hands is a non-working cat," Douglas Adams
 4.  If there's time, watch this video showing the inner life of the cell, an understanding largely achieved by scientific "take apart" techniques. Marchant, Beth. "[Cellular Visions: The Inner Life of a Cell](http://www.studiodaily.com/main/technique/tprojects/6850.html)." _StudioDaily_, July 20. 2006. Accessed October 16, 2009.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} Taking something apart is one way to understand how it works. Having disassembled a simple machine, you should consider what you've gained from the process. What did you learn? What about this challenge resembled science and what did or didn't feel like engineering? Was the tape player build to enable this sort of work? What (else) has the tape player been built for/ optimized for? What are the chances you'll be able to re-assemble this machine next week? {{< br >}}{{< br >}} Feedback from students: {{< br >}}{{< br >}} *   **advice**: _"draw pictures, taking pictures would be even better"_{{< br >}}*   **what would have helped**? _"more time, not having to reassemble, knowing which parts can be broken, if the tape player was build for human understanding and use"_{{< br >}}*   **thoughts for next time**: _"I hope not every part is needed""it would have been easier if we could re-assemble it right away rather than wait until Tuesday"_{{< br >}}*   **what were these built for**: _"these are battery eaters, optimized for disposable, cheap economy"_{{< br >}}*   **woulda-shoulda-coulda**: _"we should have tested it before we took it apart"_{{< br >}}*   **If the tape player had been built to take apart, thered probably be**..._"fewer parts esp if not all parts are needed"_ _"easier open/close, no hidden clips" "documentation"_ _"higher quality parts"_ {{< br >}}{{< br >}} Comments courtesy of the students. Used with permission. {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+Taking something apart is one way to understand how it works. Having disassembled a simple machine, you should consider what you've gained from the process. What did you learn? What about this challenge resembled science and what did or didn't feel like engineering? Was the tape player build to enable this sort of work? What (else) has the tape player been built for/ optimized for? What are the chances you'll be able to re-assemble this machine next week?
+
+Feedback from students:
+
+*   **advice**: _"draw pictures, taking pictures would be even better"_
+*   **what would have helped**? _"more time, not having to reassemble, knowing which parts can be broken, if the tape player was build for human understanding and use"_
+*   **thoughts for next time**: _"I hope not every part is needed""it would have been easier if we could re-assemble it right away rather than wait until Tuesday"_
+*   **what were these built for**: _"these are battery eaters, optimized for disposable, cheap economy"_
+*   **woulda-shoulda-coulda**: _"we should have tested it before we took it apart"_
+*   **If the tape player had been built to take apart, thered probably be**..._"fewer parts esp if not all parts are needed"_ _"easier open/close, no hidden clips" "documentation"_ _"higher quality parts"_
+
+Comments courtesy of the students. Used with permission.
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework
 
