--- a/content/pages/lecture-and-studio-notes/wk03.md
+++ b/content/pages/lecture-and-studio-notes/wk03.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 3'
 uid: c4615bc8-0f9d-6af0-20f6-0ca89935fe60
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk02) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk02) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04)
 
 [Studio 3: Sorting Hat into Project Camps](#Studio_3:_Sorting_Hat_into_Project_Camps)
 
@@ -67,9 +67,28 @@ Ruins of the Roman Forum. (Photo by Drew Endy.)
 4.  **improvements**: how will you improve your clock over time? It should be possible to improve the clock over time?
 5.  **prototyping**: how will you build and test your clock?
 
-Begin by reviewing the rules for brainstorming (see Part 3 on the Team Building page <\*\*link to section>) then either build consensus around one idea or take a vote for the top 3 and then the top choice. Once the general idea for your clock is set, get to work on each of the design elements listed above. After 45 minutes, each table will report back to the group. You may want to organize your ideas or sketch your plan on the whiteboards.
+Begin by reviewing the rules for brainstorming (see Part 3 on the Team Building page \<\*\*link to section>) then either build consensus around one idea or take a vote for the top 3 and then the top choice. Once the general idea for your clock is set, get to work on each of the design elements listed above. After 45 minutes, each table will report back to the group. You may want to organize your ideas or sketch your plan on the whiteboards.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} Designing in the absence of complete knowledge is the norm, not the exception. Once our "clocks for the long now" have been described, we'll work as a class to add more ideas, questions and thoughts about good designs despite incomplete understanding. We can also collect the problem solving techniques that worked well and those that didn't. {{< br >}}{{< br >}} Comments from 2009 students (courtesy of the students and used with permission): {{< br >}}{{< br >}} *   _"We started off with a lot of ideas but eventually went for the simplest of all..."_{{< br >}}*   _"We decided that redundancy was the only thing that might work"_ {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+Designing in the absence of complete knowledge is the norm, not the exception. Once our "clocks for the long now" have been described, we'll work as a class to add more ideas, questions and thoughts about good designs despite incomplete understanding. We can also collect the problem solving techniques that worked well and those that didn't.
+
+Comments from 2009 students (courtesy of the students and used with permission):
+
+*   _"We started off with a lot of ideas but eventually went for the simplest of all..."_
+*   _"We decided that redundancy was the only thing that might work"_
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework
 
@@ -79,4 +98,4 @@ Due at next week's studio.
 
 [Back to top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk02) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk02) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04)
