--- a/content/pages/lecture-and-studio-notes/wk04.md
+++ b/content/pages/lecture-and-studio-notes/wk04.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 4'
 uid: c54f2779-6b0a-a949-8b60-b5b85e7263fd
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05)
 
 {{< anchor "Top" >}}{{< /anchor >}}[Lecture 6: Backyard Biology](#Lecture_6:_Backyard_biology)
 
@@ -29,7 +29,21 @@ Starting today and continuing into the next two weeks, we'll consider intentiona
 *   Are there special places that DNA (the physical material) should be kept?
 *   Are there rules that can be enforced about its manipulation?
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} If you've spent time in a research lab, there's a good chance you've worked with DNA there. But is that the only place DNA can be manipulated? What if the techniques and facilities for manipulating DNA were available to everyone? What if they already are? If you've never spent time working with DNA, then you're in for a treat. Today you'll isolate and purify some DNA using materials found in most any kitchen or garage. And from this challenge, you'll be better able to judge the capabilities and possibilities of "amateur bioengineering." {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+If you've spent time in a research lab, there's a good chance you've worked with DNA there. But is that the only place DNA can be manipulated? What if the techniques and facilities for manipulating DNA were available to everyone? What if they already are? If you've never spent time working with DNA, then you're in for a treat. Today you'll isolate and purify some DNA using materials found in most any kitchen or garage. And from this challenge, you'll be better able to judge the capabilities and possibilities of "amateur bioengineering."
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 Challenge: Backyard Biology
 ---------------------------
@@ -202,4 +216,4 @@ Due at next class session.
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05)
