--- a/content/pages/lecture-and-studio-notes/wk05.md
+++ b/content/pages/lecture-and-studio-notes/wk05.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 5'
 uid: ecc8c0b6-aeb4-fcf4-81b2-d11df9989280
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06)
 
 [Lecture 8: Scientist as Activist](#Lecture_8:_Scientist_as_activist)
 
@@ -38,7 +38,30 @@ The cast, listed in the order of speaking:
 *   Dr. Ruth Hubbard, Prof. of Biology, Harvard University
 *   Dr. Jonathan King, Prof. of Biology, MIT
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} The exchanges we'll hear in this video highlight many relevant aspects of emerging technologies, not only recombinant DNA. After we watch the videotape we will consider, as a class, some of the dialog and the lessons we might apply from this history to biotechnologies coming on line today (and tomorrow). These considerations include: {{< br >}}{{< br >}} 1.  Risk assessment (including: is past performance an indicator of future success?){{< br >}}2.  Self-regulation vs government legislation (including: trust/us vs them/honesty/openness as well as accountability){{< br >}}3.  Scientific process{{< br >}}4.  Rhetoric{{< br >}}5.  Preparedness{{< br >}}6.  Scenario building{{< br >}}7.  Detection{{< br >}}8.  Surveillance {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+The exchanges we'll hear in this video highlight many relevant aspects of emerging technologies, not only recombinant DNA. After we watch the videotape we will consider, as a class, some of the dialog and the lessons we might apply from this history to biotechnologies coming on line today (and tomorrow). These considerations include:
+
+1.  Risk assessment (including: is past performance an indicator of future success?)
+2.  Self-regulation vs government legislation (including: trust/us vs them/honesty/openness as well as accountability)
+3.  Scientific process
+4.  Rhetoric
+5.  Preparedness
+6.  Scenario building
+7.  Detection
+8.  Surveillance
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 Beyond keeping these topics in mind as you watch the video, you should also be familiar with the kinds of biosafety (then called biohazard) levels that will be discussed and what each level (then called P1, P2, P3, and P4 now called BSL1, 2, 3, 4) means. Please refer to the BioBuilder [biosafety levels animation](/courses/biological-engineering/20-020-introduction-to-biological-engineering-design-spring-2009/biobuilder-animations/10.-biosafety-levels).
 
@@ -92,4 +115,4 @@ Professor King's talk tomorrow will use these ideas as points of departure. Plea
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk04) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06)
