--- a/content/pages/lecture-and-studio-notes/wk06.md
+++ b/content/pages/lecture-and-studio-notes/wk06.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 6'
 uid: d0890a7e-5f47-408f-4c58-19bfda0184d5
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07)
 
 [Lecture 10: Project Work Day](#Lecture_10:_Project_work_day)
 
@@ -74,4 +74,4 @@ If, after the discussion about yesterday's 3 ideas presentations, your team is i
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk05) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07)
