--- a/content/pages/lecture-and-studio-notes/wk07.md
+++ b/content/pages/lecture-and-studio-notes/wk07.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 7'
 uid: 9237f479-14b6-fcf6-ebc3-81a17f30c078
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08)
 
 [Lecture 12: System Overviews](#Lecture_12:_System_overviews)
 
@@ -54,7 +54,28 @@ Coliformers from Melbourne's iGEM 2007 team. (Courtesy of Phillip Dodson. Used w
 *   As a class we'll watch the first 5 minutes of the Melbourne team's iGEM presentation. ([MPEG - 31.2MB](http://2007.igem.org/wiki/jam07media/Jam07_Melbourne.mp4))
 *   Next your project team should work out a system overview for the coliform project. You can get an unused flip book (or use the back of one from the warmup exercise), or come up with some other mechanism of illustrating how the Melbourne team's system would work. **You should not spend more than 10 minutes** on this activity. When you are done, delegate someone to explain what you've done as a team and what questions arose as you worked. Then you and your team can get right to work on the last thing planned for today's lecture.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} As a class we'll consider the value of having a clear system overview. {{< br >}}{{< br >}} Comments from 2009 students (courtesy of the students, used with permission): {{< br >}}{{< br >}} *   _"easier to do if there are simple steps."_{{< br >}}*   _"tried to illustrate cracking an egg, which has lots of steps and I'm not done"_{{< br >}}*   _"drew people gathering and building a building. Hard part was redrawing the same building each time."_{{< br >}}*   _"is the buoyancy inherent?" "would cells concentrate unless light present?"" would the system work with red light then blue light or do both need to be present at the same time?"_ {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+As a class we'll consider the value of having a clear system overview.
+
+Comments from 2009 students (courtesy of the students, used with permission):
+
+*   _"easier to do if there are simple steps."_
+*   _"tried to illustrate cracking an egg, which has lots of steps and I'm not done"_
+*   _"drew people gathering and building a building. Hard part was redrawing the same building each time."_
+*   _"is the buoyancy inherent?" "would cells concentrate unless light present?"" would the system work with red light then blue light or do both need to be present at the same time?"_
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Part 3: Your Idea Here
 
@@ -76,12 +97,57 @@ Are there tools or methods for breaking down a complicated problem into simpler 
 
 This abstraction hierarchy is modified from one of Drew Endy's slides. It gives us a framework for how to intentionally engineer various aspects of biological systems.
 
-| LAYER | DEFINITION |
-| --- | --- |
-| System | Multiple devices hooked together to realize a goal |
-| Device | Multiple parts with a higher level function |
-| Part | A finite sequence of nucleotides with a specific function |
-| DNA | Sequence of nucleotides 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+LAYER
+{{< thclose >}}
+{{< thopen >}}
+DEFINITION
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+System
+{{< tdclose >}}
+{{< tdopen >}}
+Multiple devices hooked together to realize a goal
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+Device
+{{< tdclose >}}
+{{< tdopen >}}
+Multiple parts with a higher level function
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+Part
+{{< tdclose >}}
+{{< tdopen >}}
+A finite sequence of nucleotides with a specific function
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+DNA
+{{< tdclose >}}
+{{< tdopen >}}
+Sequence of nucleotides
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ![Table and diagram showing four layers: system, device, part, and DNA.](/courses/biological-engineering/20-020-introduction-to-biological-engineering-design-spring-2009/lecture-and-studio-notes/Abstraction_redrawn.gif)
 
@@ -178,8 +244,27 @@ Working in your project teams, develop a design for **a genetically encoded swit
 *   **Question**: How will you check that everybody on your team understands what is going on?
 
   
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} After we hear from all the teams about their RNA-switch details, we'll consider what was challenging about this endeavor, what it revealed about building genetic programs, and how to optimize teamwork and productivity: {{< br >}}{{< br >}} Comments from 2009 students (courtesy of the students, used with permission): {{< br >}}{{< br >}} *   _"it was hard...there wasn't enough time...we didn't know where to start...teamwork had to be figured out...being creative is hard...white boards helped...knowing a lot helps...to know things: ask others, research, copy existing ideas..."_ {{< br >}}{{< br >}}    
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+After we hear from all the teams about their RNA-switch details, we'll consider what was challenging about this endeavor, what it revealed about building genetic programs, and how to optimize teamwork and productivity:
+
+Comments from 2009 students (courtesy of the students, used with permission):
+
+*   _"it was hard...there wasn't enough time...we didn't know where to start...teamwork had to be figured out...being creative is hard...white boards helped...knowing a lot helps...to know things: ask others, research, copy existing ideas..."_
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
+  
 
 [Back to Top](#Top)
 
-[< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08)
+[\< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk06) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08)
