--- a/content/pages/lecture-and-studio-notes/wk08.md
+++ b/content/pages/lecture-and-studio-notes/wk08.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 8'
 uid: f717511d-c964-14a4-badf-cf6918fd3de0
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week>]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week>]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09)
 
 [Lecture 14: Parts and Registry](#Lecture_14:_Parts_and_registry)
 
@@ -41,25 +41,169 @@ If you wanted to write your own spoof of the William Carlos Williams poem, you m
 
 or mapped into a table like so:
 
-| SITUATION (PART 1) | SITUATION (PART 2) | FORGIVE ME | EXPLANATION (PART 1) | EXPLANATION (PART 2) |
-| --- | --- | --- | --- | --- |
-| &nbsp; |
-| {{< td-colspan 5 >}} {{< br >}}{{< br >}} Text of the afore-mentioned poems, as mapped into these elements,  {{< br >}}removed due to copyright restrictions {{< br >}}{{< br >}} {{< /td-colspan >}} |||||
-| &nbsp; |   
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+SITUATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+SITUATION (PART 2)
+{{< thclose >}}
+{{< thopen >}}
+FORGIVE ME
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 2)
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen colspan="5" >}}
+
+
+Text of the afore-mentioned poems, as mapped into these elements,  
+removed due to copyright restrictions
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+{{< tdopen >}}
+ 
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Mix and Match Poetry
 
 Now we can try to swap these poetic elements to see what interesting and clever spoofs we write. How about:
 
-| SITUATION (PART 1) | SITUATION (PART 2) | FORGIVE ME | EXPLANATION (PART 1) | EXPLANATION (PART 2) |
-| --- | --- | --- | --- | --- |
-| I have eaten the plums that were in the icebox | and I broke your leg | Forgive me | but it was morning, and I had nothing to do | and I wanted you here in the wards where I am the doctor 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+SITUATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+SITUATION (PART 2)
+{{< thclose >}}
+{{< thopen >}}
+FORGIVE ME
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 2)
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+I have eaten the plums that were in the icebox
+{{< tdclose >}}
+{{< tdopen >}}
+and I broke your leg
+{{< tdclose >}}
+{{< tdopen >}}
+Forgive me
+{{< tdclose >}}
+{{< tdopen >}}
+but it was morning, and I had nothing to do
+{{< tdclose >}}
+{{< tdopen >}}
+and I wanted you here in the wards where I am the doctor
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 That seems to work but is it better? Let's try again:
 
-| SITUATION (PART 1) | SITUATION (PART 2) | FORGIVE ME | EXPLANATION (PART 1) | EXPLANATION (PART 2) |
-| --- | --- | --- | --- | --- |
-| I chopped down the house | and which you were probably planning to air dry | Forgive me | they were delicious | it would not be so short and so small 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+SITUATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+SITUATION (PART 2)
+{{< thclose >}}
+{{< thopen >}}
+FORGIVE ME
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 1)
+{{< thclose >}}
+{{< thopen >}}
+EXPLANATION (PART 2)
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+I chopped down the house
+{{< tdclose >}}
+{{< tdopen >}}
+and which you were probably planning to air dry
+{{< tdclose >}}
+{{< tdopen >}}
+Forgive me
+{{< tdclose >}}
+{{< tdopen >}}
+they were delicious
+{{< tdclose >}}
+{{< tdopen >}}
+it would not be so short and so small
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 Well shoot, that's horrible. For one thing: It doesn't say anything understandable—this can be broadly described as a problem of **functional compostion**. For another thing: the connection between the different elements is, well, "awkward" at best—this can be broadly described as a problem of **physical composition**. If physical and functional composition of poems were working perfectly then every part would grammatically connect to the ones that flank it, and the meaning of the connected pieces would be interpretable at worst and clear at best.
 
@@ -219,4 +363,4 @@ These ideas of validation and debugging should be included in your Tech Spec Rev
 
 1 Petroski, Henry. _To Engineer Is Human: The Role of Failure in Successful Design_. New York, NY: Vintage, 1992, p. 195. ISBN: 9780679734161.
 
-[< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week>]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09)
+[\< Previous Week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk07) | [Lecture and Studio Notes Index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next Week>]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09)
