--- a/content/pages/lecture-and-studio-notes/wk10.md
+++ b/content/pages/lecture-and-studio-notes/wk10.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 10'
 uid: 6f3582f8-c737-2c4a-bdf9-724395731ce3
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11)
 
 [Lecture 18: Reliability: Accidents Waiting to Happen](#Lecture_18:_Reliability:_accidents_waiting_to_happen)
 
@@ -167,8 +167,40 @@ For today's challenge, you will act as **either** the inventors and patent holde
 
 **Good luck and, perhaps, great profits!**
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} After the challenge, we'll consider the following questions: {{< br >}}{{< br >}} 1.  Was it easy or difficult to license parts?{{< br >}}    *   hard to license parts, wanted more $, limited # of patents to be had, competition for same parts,{{< br >}}2.  What determined the value of a part? Did inventors tend to overvalue parts? Did investors tend to undervalue parts?{{< br >}}    *   cost of production{{< br >}}    *   how much the investor wanted{{< br >}}    *   knowing how much the completed system is worth would have helped value the parts,{{< br >}}    *   if there's no other competition{{< br >}}3.  Were any parts licensed for free? Why?{{< br >}}    *   no...but for the good of the many{{< br >}}4.  The challenge system in today's class contained 12 parts. Would it be easier or more difficult to license the parts for a system that contained fewer parts (e.g., 3 parts)? What about more parts (e.g., 100 parts)?{{< br >}}    *   fewer parts easier...because it would drive down costs{{< br >}}    *   or harder if more competitive{{< br >}}    *   how many own enzymes or parts{{< br >}}    *   net benefit{{< br >}}5.  In the "real world" deals are often brokered between the same parties more than once...this year you have a deal for Eau d'coli, next year for something else. How would the fact that you may have to deal with the investor/inventor again change the dynamic of today's challenge?{{< br >}}    *   I told other investors about existing deals...{{< br >}}    *   inventor set minimum price {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+After the challenge, we'll consider the following questions:
+
+1.  Was it easy or difficult to license parts?
+    *   hard to license parts, wanted more $, limited # of patents to be had, competition for same parts,
+2.  What determined the value of a part? Did inventors tend to overvalue parts? Did investors tend to undervalue parts?
+    *   cost of production
+    *   how much the investor wanted
+    *   knowing how much the completed system is worth would have helped value the parts,
+    *   if there's no other competition
+3.  Were any parts licensed for free? Why?
+    *   no...but for the good of the many
+4.  The challenge system in today's class contained 12 parts. Would it be easier or more difficult to license the parts for a system that contained fewer parts (e.g., 3 parts)? What about more parts (e.g., 100 parts)?
+    *   fewer parts easier...because it would drive down costs
+    *   or harder if more competitive
+    *   how many own enzymes or parts
+    *   net benefit
+5.  In the "real world" deals are often brokered between the same parties more than once...this year you have a deal for Eau d'coli, next year for something else. How would the fact that you may have to deal with the investor/inventor again change the dynamic of today's challenge?
+    *   I told other investors about existing deals...
+    *   inventor set minimum price
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk09) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11)
