--- a/content/pages/lecture-and-studio-notes/wk11.md
+++ b/content/pages/lecture-and-studio-notes/wk11.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 11'
 uid: 97246fb2-b4a1-84c7-3e17-a719194f3840
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk12)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk12)
 
 [Studio 11: Re-Design Day 2](#Studio_11:_Re-design_day_2)
 
@@ -26,4 +26,4 @@ Continue to work on your projects, using class time and working with Drew Endy a
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk12)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk12)
