--- a/content/pages/lecture-and-studio-notes/wk12.md
+++ b/content/pages/lecture-and-studio-notes/wk12.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 12'
 uid: 1ab5ac51-7c39-745b-42be-095483802554
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes)
 
 [Lecture 21: Project Work Day](#Lecture_22:_Project_work_day)
 
@@ -68,4 +68,4 @@ Today we consider tips and tricks that you might use to construct and deliver ev
 
 Happy Presenting!
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk11) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes)
