--- a/content/pages/lecture-and-studio-notes/wk02.md
+++ b/content/pages/lecture-and-studio-notes/wk02.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 2'
 uid: 6b8945a5-6568-58af-2270-77538a80a7dd
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk01) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk01) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03)
 
 [Lecture 3: Engineering as a Rebuild](#Lecture_3:_Engineering_as_a_rebuild)
 
@@ -23,16 +23,120 @@ uid: 6b8945a5-6568-58af-2270-77538a80a7dd
 
 Data from last week's take-apart
 
-| TEAM | PARTS | SUCCESS? |
-| --- | --- | --- |
-| 1 | 22 | Not really spinning or working |
-| 2 | 42 | Duct-tape masterpiece (see photo below), singing from tape, radio working |
-| 3 | 24 | Fully reassembled, radio working |
-| 4 | 31 | Next step full-disassembly |
-| 5 | 34 | Play and stop, no sound |
-| 6 | 27 | Spinning but uncertain of tape playing |
-| 7 | 34 | Singing in Martian, but reversing spring to bring to earth |
-| 8 | 30 | Motor was a one-time spinner 
+{{< tableopen >}}
+{{< theadopen >}}
+{{< tropen >}}
+{{< thopen >}}
+TEAM
+{{< thclose >}}
+{{< thopen >}}
+PARTS
+{{< thclose >}}
+{{< thopen >}}
+SUCCESS?
+{{< thclose >}}
+
+{{< trclose >}}
+
+{{< theadclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+1
+{{< tdclose >}}
+{{< tdopen >}}
+22
+{{< tdclose >}}
+{{< tdopen >}}
+Not really spinning or working
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+2
+{{< tdclose >}}
+{{< tdopen >}}
+42
+{{< tdclose >}}
+{{< tdopen >}}
+Duct-tape masterpiece (see photo below), singing from tape, radio working
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+3
+{{< tdclose >}}
+{{< tdopen >}}
+24
+{{< tdclose >}}
+{{< tdopen >}}
+Fully reassembled, radio working
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+4
+{{< tdclose >}}
+{{< tdopen >}}
+31
+{{< tdclose >}}
+{{< tdopen >}}
+Next step full-disassembly
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+5
+{{< tdclose >}}
+{{< tdopen >}}
+34
+{{< tdclose >}}
+{{< tdopen >}}
+Play and stop, no sound
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+6
+{{< tdclose >}}
+{{< tdopen >}}
+27
+{{< tdclose >}}
+{{< tdopen >}}
+Spinning but uncertain of tape playing
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+7
+{{< tdclose >}}
+{{< tdopen >}}
+34
+{{< tdclose >}}
+{{< tdopen >}}
+Singing in Martian, but reversing spring to bring to earth
+{{< tdclose >}}
+
+{{< trclose >}}
+{{< tropen >}}
+{{< tdopen >}}
+8
+{{< tdclose >}}
+{{< tdopen >}}
+30
+{{< tdclose >}}
+{{< tdopen >}}
+Motor was a one-time spinner
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 At the end of the 1/2 hour we will spend some time tallying the successes of the groups.
 
@@ -40,7 +144,29 @@ At the end of the 1/2 hour we will spend some time tallying the successes of the
 
 Duct-tape masterpiece from Team 2 (Photo courtesy of Ryan Alexander and anonymous students CN and DZ. Used with permission.)
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} Even if you were only partially successful in reassembling your tape player, there are probably a lot of things you've learned...things that would help you or the next person to successfully reassemble a tape player, things that reflect back on the take-apart exercise, aspects of the exercise that are common to any scientific or engineering effort (and remember your work this term will have elements of both!). We'll work as a class to add more ideas, questions and thoughts to this list. {{< br >}}{{< br >}} Comments from 2009 students (courtesy of the students, and used with permission.) {{< br >}}{{< br >}} *   **advice**: _"draw pictures, taking pictures would be even better"_{{< br >}}*   **what would have helped**? _"more time, not having to reassemble, knowing which parts can be broken, if the tape player was build for human understanding and use"_{{< br >}}*   biggest obstacle: _"not having the right experience to solder or build circuit"_{{< br >}}*   secrets to success: _"good notes, Duct tape, didn't try rebuild as it was"_{{< br >}}*   advice to next year's students: _"bring a camera, don't lose things, know which direction the springs go in, not all parts are needed"_ {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+Even if you were only partially successful in reassembling your tape player, there are probably a lot of things you've learned...things that would help you or the next person to successfully reassemble a tape player, things that reflect back on the take-apart exercise, aspects of the exercise that are common to any scientific or engineering effort (and remember your work this term will have elements of both!). We'll work as a class to add more ideas, questions and thoughts to this list.
+
+Comments from 2009 students (courtesy of the students, and used with permission.)
+
+*   **advice**: _"draw pictures, taking pictures would be even better"_
+*   **what would have helped**? _"more time, not having to reassemble, knowing which parts can be broken, if the tape player was build for human understanding and use"_
+*   biggest obstacle: _"not having the right experience to solder or build circuit"_
+*   secrets to success: _"good notes, Duct tape, didn't try rebuild as it was"_
+*   advice to next year's students: _"bring a camera, don't lose things, know which direction the springs go in, not all parts are needed"_
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework for Tomorrow's Studio Session
 
@@ -67,7 +193,25 @@ Next, think about how to storyboard your script. You do not need any fancy anima
 
 When you have completed your sketches, find a place on the wall to hang your work (**script and drawings**), and then spend 1/2 an hour walking around the room checking out what others have done.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} This poster session is a quick way to scope out the landscape of interests in the class. In addition, drawing is a time honored (but under-utilized) way to learn science. See: {{< br >}}{{< br >}} > Lerner, Neal. "Drawing to Learn Science: Legacies of Agassiz." _J Technical Writing and Communication_ 37, no. 4 (2007): 379-394. {{< br >}}{{< br >}} Next week you will be divided into temporary "camps" around particular topics and you'll generate a camp catalog of ideas. Then you'll get to choose your top three items from all the camp catalogs and be sorted into final teams with common interests. Tomorrow's challenge session will help you further decide what kinds of things are important to you and also what kinds of team dynamics matter most to you. {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+This poster session is a quick way to scope out the landscape of interests in the class. In addition, drawing is a time honored (but under-utilized) way to learn science. See:
+
+> Lerner, Neal. "Drawing to Learn Science: Legacies of Agassiz." _J Technical Writing and Communication_ 37, no. 4 (2007): 379-394.
+
+Next week you will be divided into temporary "camps" around particular topics and you'll generate a camp catalog of ideas. Then you'll get to choose your top three items from all the camp catalogs and be sorted into final teams with common interests. Tomorrow's challenge session will help you further decide what kinds of things are important to you and also what kinds of team dynamics matter most to you.
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework for Tomorrow
 
@@ -123,7 +267,27 @@ Once the ground rules for discussion are set, someone should distribute the red 
 
 Everyone will be given a Policy Position ballot in which they can indicate their level of support for each of the four possible positions. The ballots will be collected and tabulated by one member of the group. Look for common ground in your policy positions or develop a response that better represents any consensus reached by discussion. **Designate a spokesperson to report your team's policy position to the class.** Feel free to upload your group's response to the [Play Decide Web site](http://www.playdecide.eu/) if you're so inclined.
 
-|  {{< br >}}{{< br >}} **Why are we doing this??** {{< br >}}{{< br >}} This game is intended to raise several ideas. First, successful new technologies have consequences. You should always anticipate success and the consequences of success in your work. Second, the game forces you to generate a single policy decision, one that may be difficult to reach as well as unsatisfying to some members of your group. Dealing with "fractured" teams is something none of us can avoid and if today's challenge gives you even one new tool for dealing with discordance, then that's a big win. Following are some comments about reaching a single policy decision on PGD. {{< br >}}{{< br >}} Comments from 2009 students (courtesy of the students, used with permission): {{< br >}}{{< br >}} *   _"topic draws on lots of biases. Like stem cells, abortion, genetically engineered humans."_{{< br >}}*   _"policy is hard to make fair for everyone"_{{< br >}}*   _"discussion furthered if there's a person who offers dissent"_ {{< br >}}{{< br >}}  
+{{< tableopen >}}
+{{< tropen >}}
+{{< tdopen >}}
+
+
+**Why are we doing this??**
+
+This game is intended to raise several ideas. First, successful new technologies have consequences. You should always anticipate success and the consequences of success in your work. Second, the game forces you to generate a single policy decision, one that may be difficult to reach as well as unsatisfying to some members of your group. Dealing with "fractured" teams is something none of us can avoid and if today's challenge gives you even one new tool for dealing with discordance, then that's a big win. Following are some comments about reaching a single policy decision on PGD.
+
+Comments from 2009 students (courtesy of the students, used with permission):
+
+*   _"topic draws on lots of biases. Like stem cells, abortion, genetically engineered humans."_
+*   _"policy is hard to make fair for everyone"_
+*   _"discussion furthered if there's a person who offers dissent"_
+
+
+{{< tdclose >}}
+
+{{< trclose >}}
+
+{{< tableclose >}}
 
 ### Homework
 
@@ -133,4 +297,4 @@ Due at Week 3 Studio
 
 [Back to top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk01) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk01) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk03)
