--- a/content/pages/lecture-and-studio-notes/wk09.md
+++ b/content/pages/lecture-and-studio-notes/wk09.md
@@ -6,7 +6,7 @@ title: 'Class Notes: Week 9'
 uid: 596a5584-2cc5-57bc-df13-b5500d41ebc6
 ---
 
-{{< anchor "Top" >}}{{< /anchor >}}[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10)
+{{< anchor "Top" >}}{{< /anchor >}}[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10)
 
 [Lecture 16: Project Work Day](#Lecture_16:_Project_work_day)
 
@@ -39,4 +39,4 @@ Based on the work you've done so far, the questions you heard yesterday after yo
 
 [Back to Top](#Top)
 
-[< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10)
+[\< Previous week]({{< baseurl >}}/pages/lecture-and-studio-notes/wk08) | [Lecture and Studio Notes index]({{< baseurl >}}/pages/lecture-and-studio-notes) | [Next week >]({{< baseurl >}}/pages/lecture-and-studio-notes/wk10)
